c4prj2_input/grade.txt
Grading at Thu Aug  1 13:12:28 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:10:19: error: initialization discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   char * cursor = str;
                   ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
